@@ -14,7 +14,6 @@ enum ClusterRole %{
 	WORKER,
 %}
 
-type Supervisor::ClusterEndpoint: record;
 type Supervisor::Status: record;
 type Supervisor::NodeConfig: record;
 type Supervisor::NodeStatus: record;
@@ -64,14 +63,6 @@ function Supervisor::__restart%(node: string%): bool
 
 	auto rval = zeek::supervisor_mgr->Restart(node->CheckString());
 	return zeek::val_mgr->Bool(rval);
-	%}
-
-function Supervisor::__init_cluster%(%): bool
-	%{
-	if ( zeek::Supervisor::ThisNode() )
-		return zeek::val_mgr->Bool(zeek::Supervisor::ThisNode()->InitCluster());
-
-	return zeek::val_mgr->Bool(false);
 	%}
 
 function Supervisor::__is_supervised%(%): bool
